--- a/CSS/Management/metricmanager.css
+++ b/CSS/Management/metricmanager.css
@@ -19,7 +19,7 @@
     gap: 15px;
 }
 
-.metricTableItem .iconButtonLarge:nth-of-type(1) {
+.metricTableItem .manageMetricButton {
     margin-left: auto;
 }
 
