--- a/CSS/Management/metricmanager.css
+++ b/CSS/Management/metricmanager.css
@@ -19,7 +19,7 @@
     gap: 15px;
 }
 
-.metricTableItem .manageMetricButton {
+.metricTableItem .generateRequestButton {
     margin-left: auto;
 }
 
