Add Animation To Skeleton

--- a/CSS/Common/main.css
+++ b/CSS/Common/main.css
@@ -234,3 +234,16 @@ body {
 .apexcharts-legend {
     justify-content: center !important;
 }
+
+.skeleton {
+    animation: 700ms infinite alternate skeletonFlash;
+}
+
+@keyframes skeletonFlash {
+    0% {
+        opacity: 40%;
+    }
+    100% {
+        opacity: 100%;
+    }
+}
