--- a/CSS/Common/main.css
+++ b/CSS/Common/main.css
@@ -64,27 +64,27 @@ body {
 }
 
 .fjend {
-    justify-content: flex-end;
+    justify-content: flex-end !important;
 }
 
 .fjcenter {
-    justify-content: center;
+    justify-content: center !important;
 }
 
 .fjstart {
-    justify-content: flex-start;
+    justify-content: flex-start !important;
 }
 
 .faend {
-    align-items: flex-end;
+    align-items: flex-end !important;
 }
 
 .facenter {
-    align-items: center;
+    align-items: center !important;
 }
 
 .fastart {
-    align-items: flex-start;
+    align-items: flex-start !important;
 }
 
 .gap15 {
