--- a/CSS/Mobile/login.css
+++ b/CSS/Mobile/login.css
@@ -3,6 +3,7 @@
     width: 100vw;
     height: 100vh;
     padding-top: 10vh;
+    position: relative;
     background-color: var(--col-contrast);
 }
 
@@ -14,6 +15,18 @@
     width: 100vw;
     gap: 20px;
 }
+
+.mobileloginscreen .bottomLogin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    height: 20vh;
+}
+
 
 .mobileloginscreen .topLogin h3 {
     color: var(--col-text);
