--- a/CSS/Mobile/main.css
+++ b/CSS/Mobile/main.css
@@ -1,3 +1,4 @@
+
 .mobile {
     background-color: transparent;
     margin: 0;
@@ -10,7 +11,7 @@
 .mobile .largeIcon {
     font-size: 15vw;
     font-weight: 500;
-    color: #007AFF;
+    color: var(--col-primary);
     margin: 0;
 }
 
