--- a/CSS/Viewer/Graphs/table_0_cslongdouble.css
+++ b/CSS/Viewer/Graphs/table_0_cslongdouble.css
@@ -1,9 +1,35 @@
+
 .csLongDouble.graphTable0 .nextui-table-container {
     width: 100%;
     height: 100%;
+    overflow-y: auto;
+    -ms-overflow-style: none !important;
+    scrollbar-width: none !important;
+}
+
+.csLongDouble.graphTable0 .nextui-table-container::-webkit-scrollbar {
+    display: none !important;
 }
 
 .csLongDouble.graphTable0 th {
-    background-color: var(--col-tablehead) !important;
-    color: white !important;
+    background-color: var(--col-bg) !important;
+    color: var(--col-text-secondary) !important;
+    font-size: 14px !important;
+    font-weight: 500 !important;
+    padding: 0px 5px 0px 5px !important;
+}
+
+.csLongDouble.graphTable0 td {
+    padding: 0.625rem 5px 0.625rem 5px !important;
+}
+
+.csLongDouble.graphTable0 .metricIcon {
+    width: 30px;
+    height: 30px;
+    border-radius: 8px;
+}
+
+.csLongDouble.graphTable0 .metricIcon img {
+    width: 21px;
+    height: 21px;
 }
