--- a/CSS/Viewer/Graphs/table_0_cslongdouble.css
+++ b/CSS/Viewer/Graphs/table_0_cslongdouble.css
@@ -33,3 +33,8 @@
     width: 21px;
     height: 21px;
 }
+
+.csLongDouble.graphTable0 .flag {
+    border-radius: 4px !important;
+    margin-top: 6px !important;
+}
