--- a/CSS/Common/layout.css
+++ b/CSS/Common/layout.css
@@ -48,7 +48,9 @@
 
 .csMedLong {
     width: 310px;
+    min-width: 310px;
     height: 140px;
+    min-height: 140px;
     background-color: var(--col-contrast);
     border-radius: 10px;
     overflow: hidden;
@@ -68,7 +70,9 @@
 
 .csShortLong {
     width: 310px;
+    min-width: 310px;
     height: 70px;
+    min-height: 70px;
     background-color: var(--col-contrast);
     border-radius: 10px;
     overflow: hidden;
@@ -88,7 +92,9 @@
 
 .csLongDouble {
     width: 640px;
+    min-width: 640px;
     height: 310px;
+    min-height: 310px;
     background-color: var(--col-contrast);
     border-radius: 10px;
     overflow: hidden;
