Update Tooltips On Graph line_0

--- a/CSS/Viewer/tooltip.css
+++ b/CSS/Viewer/tooltip.css
@@ -23,3 +23,7 @@
     left: 0;
     top: 0;
 }
+
+.hideTooltips .apexcharts-tooltip, .hideTooltips .apexcharts-series-markers-wrap {
+    display: none !important;
+}
