--- a/CSS/Management/cardbuttons.css
+++ b/CSS/Management/cardbuttons.css
@@ -3,11 +3,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    right: 25px;
+    right: 10px;
     top: 10px;
     border-radius: 8px;
     height: 30px;
-    width: 30px;
+    min-width: 30px;
     z-index: 100;
 }
 
