--- a/CSS/Viewer/Graphs/line_0_all.css
+++ b/CSS/Viewer/Graphs/line_0_all.css
@@ -5,3 +5,19 @@
 .apexcharts-marker {
    transition: none;
 }
+
+.graphLine0 .metricName {
+   font-family: InterVariable !important;
+   font-weight: 500;
+   text-transform: uppercase;
+
+   margin: 0;
+   font-size: 14px;
+   color: var(--col-text-secondary);
+   letter-spacing: normal;
+   line-height: normal;
+
+   position: absolute;
+   top: 15px;
+   left: 15px;
+}
