--- a/CSS/Viewer/Graphs/common.css
+++ b/CSS/Viewer/Graphs/common.css
@@ -1,3 +1,11 @@
+.graphLoading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 .graphError0 {
     display: flex;
     justify-content: center;
