--- a/CSS/Viewer/Graphs/common.css
+++ b/CSS/Viewer/Graphs/common.css
@@ -6,6 +6,18 @@
     height: 100%;
 }
 
+.graphLoadingOverlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+}
+
 .graphError0 {
     display: flex;
     justify-content: center;
