--- a/CSS/Common/setup.css
+++ b/CSS/Common/setup.css
@@ -33,7 +33,7 @@
     position: relative;
 }
 
-.loginModal button {
+.loginModal button, .selectProjectModal > button {
     position: absolute;
     bottom: 50px;
     right: 50px;
