--- a/Plugins/Standard/Integrated Documentation Plugin/documentation.plugin.css
+++ b/Plugins/Standard/Integrated Documentation Plugin/documentation.plugin.css
@@ -18,11 +18,41 @@
     margin: 0
 }
 
-.sidebarDocumentation .sidebarDocumentationHeader button {
-    display: none;
-    width: 20px;
-    height: 20px;
-    padding: 0px;
-    font-size: 12px;
-    border-radius: 6px;
+.sidebarDocumentation .docList {
+    transition: transform 0.3s, background-color 0.3s, border-radius 0.3s, padding 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    width: 80%;
+}
+
+.openDocsButton {
+    width: 100% !important;
+    display: flex !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
+    padding-left: 5px !important;
+}
+
+.openDocsButton h3 {
+    color: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    margin: 0;
+    margin-left: 5px;
+}
+
+.openDocsButton .openDocsButtonIcon {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+}
+
+.openDocsButton .openDocsButtonIcon img {
+    width: 23px;
 }
