--- a/Plugins/Standard/Integrated Documentation Plugin/documentation.plugin.css
+++ b/Plugins/Standard/Integrated Documentation Plugin/documentation.plugin.css
@@ -55,3 +55,13 @@
 .openDocsButton .openDocsButtonIcon img {
     width: 23px;
 }
+
+.documentationFrame {
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    max-height: calc(100vh - 80px);
+    border: none;
+    overflow: hidden;
+    margin: 0;
+}
