--- a/CSS/Common/setup.css
+++ b/CSS/Common/setup.css
@@ -26,8 +26,8 @@
     justify-content: center;
     align-items: flex-start;
     z-index: 10;
-    width: 100%;
-    height: 100%;
+    width: 1000px;
+    height: 600px;
     padding: 100px;
     gap: 30px;
     position: relative;
@@ -43,6 +43,14 @@
     font-size: 40px;
     font-weight: 600;
     color: var(--col-text);
+}
+
+.loginModal .keyInput {
+    width: 50% !important;
+}
+
+.loginModal .keyInput input {
+    width: 100% !important;
 }
 
 .loginIcon {
