--- a/CSS/Common/setup.css
+++ b/CSS/Common/setup.css
@@ -12,10 +12,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    padding-left: 100px;
-    padding-right: 100px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 100px;
 }
 
 .setupModal {
@@ -46,11 +43,11 @@
 }
 
 .loginModal .keyInput {
-    width: 50% !important;
+    width: 50%;
 }
 
 .loginModal .keyInput input {
-    width: 100% !important;
+    width: 100%;
 }
 
 .loginIcon {
@@ -58,4 +55,48 @@
     right: 100px;
     width: 300px;
     height: 300px;
+}
+
+@media (max-aspect-ratio: 10/9) {
+
+    .setupContainer {
+        padding: 0;
+    }
+
+    .setupModal {
+        border-radius: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100vw;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .loginIcon {
+        display: none;
+    }
+
+    .loginModal .keyInput {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .loginModal .keyInput input {
+        width: 100%;
+    }
+
+    .loginModal button, .selectProjectModal > button {
+        width: 80%;
+        right: 0;
+        left: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .loginModal .ti-shield-lock {
+        font-size: 5rem;
+        color: var(--nextui-colors-primary);
+    }
 }
