--- a/CSS/Mobile/common.css
+++ b/CSS/Mobile/common.css
@@ -8,4 +8,12 @@
         display: unset !important;
     }
 
+    ::-webkit-scrollbar {
+        width: 0px !important;
+    }
+
+    body {
+        overflow: hidden;
+    }
+
 }
