--- a/CSS/Viewer/Graphs/bar_0_all.css
+++ b/CSS/Viewer/Graphs/bar_0_all.css
@@ -1,5 +1,5 @@
 .graphBar0 .metricName {
-    font-family: InterVariable !important;
+    font-family: var(--standard-font) !important;
     font-weight: 500;
     text-transform: uppercase;
  
