--- a/CSS/Viewer/Graphs/pie_0_csmedlong.css
+++ b/CSS/Viewer/Graphs/pie_0_csmedlong.css
@@ -43,7 +43,7 @@
 }
 
 .csMedLong.graphPie0 .subCard h3 {
-    font-family: InterVariable !important;
+    font-family: var(--standard-font) !important;
     font-weight: 500;
     text-transform: uppercase;
 
