--- a/CSS/Viewer/Graphs/progress_0_csshortlong.css
+++ b/CSS/Viewer/Graphs/progress_0_csshortlong.css
@@ -59,7 +59,7 @@
 }
 
 .csShortLong.graphProgress0 h3 {
-    font-family: InterVariable !important;
+    font-family: var(--standard-font) !important;
     font-weight: 500;
     text-transform: uppercase;
 
