--- a/CSS/Viewer/Graphs/progress_0_csmedlong.css
+++ b/CSS/Viewer/Graphs/progress_0_csmedlong.css
@@ -58,7 +58,7 @@
 }
 
 .csMedLong.graphProgress0 h3 {
-    font-family: InterVariable !important;
+    font-family: var(--standard-font) !important;
     font-weight: 500;
     text-transform: uppercase;
 
