Update Mobile Layouts

--- a/CSS/Mobile/common.css
+++ b/CSS/Mobile/common.css
@@ -16,4 +16,14 @@
         overflow: hidden;
     }
 
+        
+    .dashboard {
+        margin-left: 0 !important;
+        padding: 0 !important;
+        width: 100vw !important;
+    }
+
+    .dashboardLayout {
+        width: 100vw !important;
+    }
 }
