--- a/CSS/Mobile/common.css
+++ b/CSS/Mobile/common.css
@@ -27,6 +27,7 @@
         margin-top: 0 !important;
         padding: 0 !important;
         width: 100vw !important;
+        height: 100vh !important;
     }
 
     .dashboardLayout {
