--- a/CSS/Viewer/clientsettings.css
+++ b/CSS/Viewer/clientsettings.css
@@ -1,11 +1,27 @@
 .clientSettings {
     height: 400px;
     display: flex;
+    gap: 15px;
 }
 
 .settingsSidebar {
     height: 100%;
     background-color: var(--col-bg);
     border-radius: 10px;
-    width: 200px;
+    min-width: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+
+.settingsSidebarButton {
+    justify-content: left;
+    padding-left: 10px;
+}
+
+.settingsPanel {
+    width: 100%;
+    height: 100%;
+    padding: 15px;
 }
