Major CSS Refactor

--- a/CSS/Admin/keycreator.css
+++ b/CSS/Admin/keycreator.css
@@ -40,7 +40,7 @@
     align-items: center;
     padding-left: 15px;
     padding-right: 5px;
-    font-size: 16px;
+    font-size: 0.16rem;
     font-family: Jetbrains !important;
 }
 
