--- a/CSS/Admin/keymanager.css
+++ b/CSS/Admin/keymanager.css
@@ -15,11 +15,11 @@
 
 .keyTableItem p {
     line-height: normal;
-    font-size: 20px;
+    font-size: 0.2rem;
 }
 
 .keyTableItem h1 {
-    font-size: 16px;
+    font-size: 0.16rem;
     letter-spacing: normal;
     line-height: normal;
     margin: 0;
