--- a/CSS/Management/groupmanager.css
+++ b/CSS/Management/groupmanager.css
@@ -51,7 +51,7 @@
 
 .metricGroup .metricGroupHeader h3 {
     text-align: center;
-    font-size: 16px;
+    font-size: 0.16rem;
     margin: 0;
     font-weight: 500;
 }
