--- a/CSS/Viewer/Graphs/line_0_all.css
+++ b/CSS/Viewer/Graphs/line_0_all.css
@@ -4,7 +4,7 @@
    text-transform: uppercase;
 
    margin: 0;
-   font-size: 14px;
+   font-size: 0.14rem;
    color: var(--col-text-secondary);
    letter-spacing: normal;
    line-height: normal;
