--- a/CSS/Viewer/Graphs/table_0_cslongdouble.css
+++ b/CSS/Viewer/Graphs/table_0_cslongdouble.css
@@ -14,13 +14,14 @@
 .csLongDouble.graphTable0 th {
     background-color: var(--col-bg) !important;
     color: var(--col-text-secondary) !important;
-    font-size: 14px !important;
+    font-size: 0.14rem !important;
     font-weight: 500 !important;
     padding: 0px 5px 0px 5px !important;
 }
 
 .csLongDouble.graphTable0 td {
-    padding: 0.625rem 5px 0.625rem 5px !important;
+    padding: 0.0625rem 5px 0.0625rem 5px !important;
+    font-size: 0.14rem !important;
 }
 
 .csLongDouble.graphTable0 .metricIcon {
