--- a/CSS/Viewer/sidebar.css
+++ b/CSS/Viewer/sidebar.css
@@ -79,7 +79,7 @@
     width: 20px;
     height: 20px;
     padding: 0px;
-    font-size: 12px;
+    font-size: 0.12rem;
     border-radius: 6px;
 }
 
