--- a/CSS/Viewer/tooltip.css
+++ b/CSS/Viewer/tooltip.css
@@ -8,7 +8,7 @@
     min-height: 40px;
     min-width: 40px;
     padding: 0px 10px 0px 10px;
-    font-size: 14px;
+    font-size: 0.14rem;
     font-weight: 400;
     border-radius: 10px;
     z-index: 99999;
